--- a/web-developer.html
+++ b/web-developer.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mmiagency/e65caacb-02ea-47cf-9eee-9df29a395f8c'>MMI Agency - Web Development Content Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mmiagency/e65caacb-02ea-47cf-9eee-9df29a395f8c'>MMI Agency - Web Development Content Specialist</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/web-ui-designer-new-service-development-9710'>Web/UI designer - New service development - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/web-ui-designer-new-service-development-9710'>Web/UI designer - New service development - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Web Application Developer (PHP, JS) at ADVFN.</p>
 <hr/>
-<h5><a href='https://openwt.workable.com/j/9B9CEE2322?viewed=true'>Open Web Technology - Jobs: Backend DEVELOPER Java - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openwt.workable.com/j/9B9CEE2322?viewed=true'>Open Web Technology - Jobs: Backend DEVELOPER Java - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Backend DEVELOPER Java at Open Web Technology.</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">Montreal, Quebec, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/yoaoxxprrsm8bezxza5pzgek4r'>Certified Microsoft .NET web Developer II (16128) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/yoaoxxprrsm8bezxza5pzgek4r'>Certified Microsoft .NET web Developer II (16128) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -175,11 +175,11 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248860-java-web-developer-operation'>Woongjin, Inc Java Web Developer & Operation | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248860-java-web-developer-operation'>Woongjin, Inc Java Web Developer & Operation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
+<h5><a href='https://helloagain-jobs.join.com/jobs/250448-web-developer'>Job @ helloain (Leonding): WEB DEVELOPER | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -191,7 +191,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://flowtify.recruiterbox.com/jobs/fk036c2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://flowtify.recruiterbox.com/jobs/fk036c2'>
     Junior React Web Developer (m/w/d) at Flowtify GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -256,7 +256,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p>3 days ago ... At AIcrowd, we're looking to grow our team with a Web Application Developer (
 Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -272,7 +272,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/ocRzafww'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/stars-group/job/ocRzafww'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -375,7 +375,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/incode/61ad0e2e-8f8c-4024-9fc1-05c71801b1ae'>Incode Technologies - Senior Front End Web Developer / Engineer</a></h5> 
 <p><span class="badge badge-light">Mexico Belgrade</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -418,7 +418,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kallesgroup/jobs/4298748002'>Job Application for Full-Stack Web Developer at Kalles Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/kallesgroup/jobs/4298748002'>Job Application for Full-Stack Web Developer at Kalles Group</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
