--- a/data-science.html
+++ b/data-science.html
@@ -45,6 +45,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://groupeseb.referrals.selectminds.com/jobs/data-scientist-1755'>DATA SCIENTIST - GROUPE SEB Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/liveramp/jobs/1794532'>Job Application for Data Scientist at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -162,7 +166,7 @@ Sector.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mention.workable.com/jobs/1073014'>Mention - Jobs: Senior Data Scientist - Apply online</a></h5> 
+<h5><a href='https://mention.workable.com/jobs/1073014'>Mention - Jobs: Senior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Master's Degree in Data Sciences, Applied Mathematics, Machine Learning or 
 related; 3 to 5 years of experience in Data Sciences, ideally in a tech company?...</p>
@@ -189,7 +193,7 @@ delivering actionable insights on crop health directly to the field meaning farm
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/67c9fc2d-c236-46ee-9a2d-7c8958a6421b'>Bill.com - Lead Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/bill/67c9fc2d-c236-46ee-9a2d-7c8958a6421b'>Bill.com - Lead Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This position requires a person who has experience with developing machine 
 learning models and performing analytics preferably in risk domain.</p>
@@ -199,7 +203,7 @@ learning models and performing analytics preferably in risk domain.</p>
 <p>1 day ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1796132'>Job Application for Senior Data Scientist at GSW Sports, LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/goldenstatewarriors/jobs/1796132'>Job Application for Senior Data Scientist at GSW Sports, LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... The Golden State Warriors are looking for a savvy and innovative Senior Data 
 Scientist to join our growing Basketball Operations team. In this role, you will 
@@ -222,7 +226,7 @@ have?...</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -266,7 +270,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/paylocity/2e41c6b2-7596-4fdf-9526-8d3c248de967'>Paylocity - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/paylocity/2e41c6b2-7596-4fdf-9526-8d3c248de967'>Paylocity - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Data Scientist. Remote - Tech. Technology: Product Development & Technology 
 ? Data Insights. Full-Time. Apply for this job. At Paylocity, we create software?...</p>
@@ -285,7 +289,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -305,7 +309,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://eygbl.referrals.selectminds.com/jobs/splunk-data-scientist-90830'>Splunk Data Scientist - EY Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/splunk-data-scientist-90830'>Splunk Data Scientist - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Job Summary: The Splunk Data Analytics and Business Intelligence Data 
 Scientist ? Assistant Director drives forward the Business Value Creation...</p>
@@ -359,7 +363,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692100973-senior-data-scientist'>Publicis Groupe Senior Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692100973-senior-data-scientist'>Publicis Groupe Senior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -409,7 +413,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medlanes.join.com/jobs/253116-jr-data-scientist-at-digital-health-startup'>Job @ Medlanes (Berlin): Jr. Data Scientist at Dig... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/253116-jr-data-scientist-at-digital-health-startup'>Job @ Medlanes (Berlin): Jr. Data Scientist at Dig... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -423,7 +427,7 @@ your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.
 <p>Jul 16, 2019 ... We are looking for a Data Scientist to develop a revenue generating, predictive, 
 intelligent, learning algorithm. The algorithm will ingest market analytics and?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Senior Data Scientist (multiple roles). Ottawa, Canada. R&D ? Data Science & 
 Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
@@ -476,10 +480,6 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <hr/>
 <h5><a href='https://datatonic.workable.com/j/4F23F92AEA'>Datatonic - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich London</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://datatonic.workable.com/j/9AE944D825'>Datatonic - Jobs: Data Scientist - Apply online</a></h5> 
-<p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
